# cinefeel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  vendor.yml
api/: Cargo.toml  pyproject.toml  start-server.sh
api/src/: main.py  main.rs
api/src/entities/: mod.rs  movie.py  movie.rs  person.rs  storable.rs
api/src/interfaces/: mod.rs
api/src/queries/: movies.py
api/src/repositories/: mod.rs
api/src/repositories/db/: connection.rs  mod.rs  person_repository.rs
api/src/repositories/query/: mod.rs  person_schema.rs
api/src/repositories/routes/: hello.rs  persons.rs
backend/: .env.template  1_scrape.sh  2_extract.sh  3_store.sh  4_connect.sh  README.md  connect.sh  docker-compose.yml  extract.sh  launcher.sh  main.py  prefect.yaml  pyproject.toml  pytest.ini  run-flows.sh  scrape.sh  start-pages-dev.yml  start-pages-prod.yml  start-server.sh  start.sh  store.sh
backend/.github/workflows/: ci.yml
backend/cinefeel.db/graph.db/: .wal
backend/src/: exceptions.py  main.py  settings.py
backend/src/entities/: __init__.py  base.py  color.py  component.py  composable.py  content.py  disability.py  extraction.py  film.py  ml.py  movie.py  nationality.py  person.py  relationship.py  religion.py  sexual_orientation.py  source.py  storable.py  wiki.py  woa.py
backend/src/interfaces/: analyzer.py  assembler.py  content_parser.py  content_splitter.py  data_source.py  document_repo.py  entity_transformer.py  extractor.py  formater.py  formatter.py  http_client.py  indexer.py  info_retriever.py  link_extractor.py  llm.py  nlp_processor.py  pipeline.py  relation_manager.py  resolver.py  similarity.py  stats.py  storage.py  task.py  task_runner.py
backend/src/repositories/: async_http.py  dask_runner.py  dramatiq_runner.py  entity_storage.py  flow_analyzer.py  flow_downloader.py  flow_indexer.py  html_analyzer.py  html_storage.py  json_storage.py  meili_indexer.py  ollama_parser.py  stats.py  wikipedia.py  wikipedia_crawler.py  wikipedia_extractor.py
backend/src/repositories/db/: abstract_graph.py  film.py  film_graph.py  graph_query.py  graph_storage.py  mg_core.py  person_graph.py  redis.py
backend/src/repositories/flows/: entity_enrichment_pipeline.py  entity_extraction_pipeline.py  entity_relationships_pipeline.py  extraction_pipeline.py  flow_analyzer.py  flow_chain.py  flow_downloader.py  html_pipeline.py  pipeline.py  relations_pipeline.py  relationships_pipeline.py  task_analyzer.py  task_downloader.py  task_indexer.py
backend/src/repositories/html/: html_analyzer.py
backend/src/repositories/html_parser/: html_analyzer.py  html_chopper.py  html_semantic.py  html_splitter.py  splitter.py  wikipedia_extractor.py  wikipedia_info_retriever.py
backend/src/repositories/http/: async_http.py  sync_http.py
backend/src/repositories/local_storage/: html_storage.py  json_storage.py
backend/src/repositories/ml/: bert_similarity.py  bert_summary.py  cache.py  exceptions.py  html_analyzer.py  html_simplifier.py  html_to_text.py  lexrank.py  mistral_data_miner.py  ollama_childhood.py  ollama_data_miner.py  ollama_dataminer.py  ollama_date_parser.py  ollama_generic.py  ollama_influences.py  ollama_messager.py  ollama_parser.py  ollama_person_feats.py  (+8 more)
backend/src/use_cases/: analyze_films.py  analyze_persons.py  analyze_uc.py  connect.py  crawl_uc.py  db_storage.py  deploy.py  enrich.py  extract.py  extract_films.py  extract_persons.py  extract_uc.py  extract_woa.py  find_relationships.py  flow_uc.py  index_films.py  scrape.py  scrape_uc.py  scrape_wikipedia.py  serve.py  uc_types.py
backend/tests/: conftest.py  test_settings.py
backend/tests/entities/: test_base.py  test_class.py  test_component.py  test_composable.py  test_content.py  test_film.py  test_person.py  test_relationship.py  test_sourcable.py  test_woa.py
backend/tests/repositories/: conftest.py  start-pages-test.yml  test_dramatiq_runner.py  test_stats.py  test_wikipedia.py  test_wikipedia_extractor.py
backend/tests/use_cases/: test_analyze_persons.py  test_enrich.py
scraper/: pyproject.toml
scraper/src/: main.py  scrape_fr_films.py  settings.py  text.json
scraper/src/entities/: film.py  person.py  woa.py
scraper/src/interfaces/: analyzer.py  content_parser.py  data_source.py  http_client.py  indexer.py  parser.py  scraper.py  similarity.py  storage.py
scraper/src/repositories/: async_http.py  bert_similarity.py  dask_runner.py  entity_storage.py  html_analyzer.py  html_splitter.py  html_storage.py  json_storage.py  meili_indexer.py  ollama_parser.py  raw_content_storage.py  scraper_repository.py  wikipedia_crawler.py  wikipedia_extractor.py  wikipedia_parser.py  wikipedia_repository.py
scraper/src/use_cases/: analyze_html.py  extract_woa.py  index_films.py  scrape_wikipedia.py
(+158 files in other folders)
