[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "gustelle",email = "guillaume.patin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "strawberry-graphql[cli] (>=0.284.2,<0.285.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
