[project]
name = "cinefeel_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "gustelle"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "aiohttp[speedups] (>=3.11.18,<4.0.0)",
    "html5lib (>=1.1,<2.0)",
    "meilisearch (>=0.34.1,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "typer (>=0.15.3,<0.16.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "htmlrag (>=0.1.1,<0.2.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (==4.48)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp-client-cache[aiofiles,aiosqlite] (>=0.13.0,<0.14.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "prefect[dask] (>=3.4.3,<4.0.0)",
    "bert-extractive-summarizer (>=0.10.1,<0.11.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "mistralai (>=1.8.2,<2.0.0)",
    "pyphonetics (>=0.5.3,<0.6.0)",
    "dateparser (>=1.2.1,<2.0.0)",
    "timefhuman (>=0.1.4,<0.2.0)",
]

[tool.poetry]
package-mode = false

[tool.poe.tasks]
run         = "python3 main.py"
test        = "pytest"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"
bokeh = "^3.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
