[project]
name = "cinefeel_backend"
version = "0.2.0"
description = ""
authors = [
    {name = "gustelle"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "html5lib (>=1.1,<2.0)",
    "meilisearch (>=0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "orjson (>=3.11.0,<4.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "typer (>=0.16.0)",
    "htmlrag (>=0.1.1,<0.2.0)", 
    "loguru (>=0.7.3,<0.8.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "mistralai (>=1.9.3,<2.0.0)",
    "pyphonetics (>=0.5.3,<0.6.0)",
    "dateparser (>=1.2.2,<2.0.0)", 
    "hishel (>=0.1.3,<0.2.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "prefect (>=3.4.10,<4.0.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "pydantic-yaml (>=1.6.0,<2.0.0)",
    "txtai (>=9.0.1,<10.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "bert-extractive-summarizer (>=0.10.1,<0.11.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poe.tasks]
run         = "python3 main.py"
test        = "pytest -s --tb=line"
serve       = "poe run serve"
deploy      = "poe run deploy"
extract     = "poe run extract"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"
bokeh = "^3.7.3"
pytest-sugar = "^1.1.1"
pytest-timeout = "^2.4.0"
pytest-instafail = "^0.5.0"
pytest-httpx = "^0.35.0"
pytest = "^8.4.2"
pytest-mock = "^3.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
