[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "gustelle",email = "guillaume.patin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wikipedia-api (>=0.8.1,<0.9.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "aiohttp[speedups] (>=3.11.18,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "html5lib (>=1.1,<2.0)",
    "meilisearch (>=0.34.1,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
